crates/syntax/tests/snapshots/parser__option_forms.snap
---
source: crates/syntax/tests/parser.rs
expression: "tree(\"OPTION BASE 1\\nOPTION _EXPLICIT: DIM x\\nOPTION _EXPLICITARRAY\\nOPTION EXPLICIT\\nSUB s\\n  OPTION _EXPLICIT\\nEND SUB\\n\")"
---
SourceFile 0..109
  OptionStmt 0..13
    Ident OPTION
    Whitespace  
    Ident BASE
    Whitespace  
    Number 1
  Newline \x0A
  OptionStmt 14..30
    Ident OPTION
    Whitespace  
    Ident _EXPLICIT
  Colon :
  Whitespace  
  DimStmt 32..37
    Ident DIM
    Whitespace  
    DimItem 36..37
      Ident x
  Newline \x0A
  OptionStmt 38..59
    Ident OPTION
    Whitespace  
    Ident _EXPLICITARRAY
  Newline \x0A
  OptionStmt 60..75
    Ident OPTION
    Whitespace  
    Ident EXPLICIT
  Newline \x0A
  ProcDef 76..109
    ProcHeader 76..81
      Ident SUB
      Whitespace  
      Ident s
    Newline \x0A
    Whitespace   
    OptionStmt 84..100
      Ident OPTION
      Whitespace  
      Ident _EXPLICIT
    Newline \x0A
    ProcEnd 101..108
      Ident END
      Whitespace  
      Ident SUB
    Newline \x0A
