crates/syntax/tests/snapshots/parser__recovery_stray_end_sub.snap
---
source: crates/syntax/tests/parser.rs
assertion_line: 104
expression: "tree(\"PRINT 0\\nEND SUB\\nPRINT 1\\n\")"
---
SourceFile 0..24
  PrintStmt 0..7
    Ident PRINT
    Whitespace  
    Literal 6..7
      Number 0
  Newline \x0A
  Error 8..15
    Ident END
    Whitespace  
    Ident SUB
  Newline \x0A
  PrintStmt 16..23
    Ident PRINT
    Whitespace  
    Literal 22..23
      Number 1
  Newline \x0A
t.bas:2:1: error: `END SUB` without a `SUB`
